--- a/write-up/write-up.rmd
+++ b/write-up/write-up.rmd
@@ -7,6 +7,7 @@ header-includes:
 - \usepackage{float}
 author: "Jesse McDevitt-Irwin"
 output: pdf_document
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 keep_tex: TRUE
 bibliography: ["/home/friend/bibtex/references.bib"]
 biblio-style: "apalike"
