--- a/write-up/write-up.rmd
+++ b/write-up/write-up.rmd
@@ -182,7 +182,7 @@ At birth, the infant has a large amount of fetal hemoglobin which must be broken
 
 ```{r cohort time, fig.height = 6, fig.width = 10, fig.align = "center"} 
 ggplot(dhs) + geom_smooth(aes(x= Time-1200,y=hemoglobin, color = survey))+geom_hline(aes(yintercept=105))+
-annotate("rect", xmin = 99, xmax = 105, ymin = 85 , ymax = Inf,color="Orange",alpha = .2)+
+annotate("rect", xmin = 99, xmax = 105, ymin = -Inf , ymax = Inf,color="Orange",alpha = .2)+
 labs(title = "Hemoglobin conditional on DOB by DHS Survey", x ="Birth Month: Jan 2000 = 0", y= "Hemoglobin: g/l")
 ggplot(dhs) + geom_smooth(aes(x= as.numeric(age),y=hemoglobin, color = survey))+geom_hline(aes(yintercept=105))+ labs(title = "Hemoglobin conditional on Age by DHS Survey", x ="Age of child in Months", y= "Hemoglobin: g/l")
 ```
@@ -263,8 +263,8 @@ The 2008 crisis forms a contiguous 8-month period in which the price index is gr
 load("~/Research/Anemia/Anemia/data/index.Rdata")
 
 ggplot(prices, aes(x=Time, y= log(real_index)-6.25))+ geom_path()+geom_point() +
-  annotate("rect", xmin = 51, xmax = 58, ymin = -0.125, ymax = Inf,color="Orange",alpha = .2) +
-  annotate("rect", xmin = 51, xmax = 58, ymin = -0.125, ymax = Inf,color="Orange",alpha = .2) +
+  annotate("rect", xmin = 51, xmax = 58, ymin = -Inf, ymax = Inf,color="Orange",alpha = .2) +
+  annotate("rect", xmin = 51, xmax = 58, ymin = -Inf, ymax = Inf,color="Orange",alpha = .2) +
   labs(title = "Exposure Assignment", x = "Month: Nov 2003 = 0", y= "Index in log-terms (real)")
 ```
 
@@ -317,14 +317,14 @@ Here I plot the median hemoglobin by birth-quarter. I highlight the two quarters
 
 ```{r birth, fig.height = 6, fig.width = 10, fig.align = "center"}
 load("~/Research/Anemia/Anemia/data/birthq_graph.Rdata")
-ggplot(birth)+ geom_point(aes(x = birth_q, y=all_sen))+ 
-  annotate("rect", xmin = 9, xmax = 10, ymin = -.4, ymax = Inf,color="Orange",alpha = .2)+
+ggplot(birth)+ geom_point(aes(x = birth_q, y=all_sen), size = 4)+ 
+  annotate("rect", xmin = 9, xmax = 10, ymin = -Inf, ymax = Inf,color="Orange",alpha = .2)+
   labs(title = "Median hemoglobin by Birth Quarter: All of Senegal",x = "Birth Quarter: 0 = 2006", y= "Median Hemoglobin")
-ggplot(birth)+ geom_point(aes(x = birth_q, y=dakar))+ 
-  annotate("rect", xmin = 9, xmax =10, ymin = -.75, ymax = Inf,color="Orange",alpha = .2)+
+ggplot(birth)+ geom_point(aes(x = birth_q, y=dakar), size =4)+ 
+  annotate("rect", xmin = 9, xmax =10, ymin = -Inf, ymax = Inf,color="Orange",alpha = .2)+
   labs(title = "Median hemoglobin by Birth Quarter: Dakar",x = "Birth Quarter: 0 = 2006", y= "Median Hemoglobin")
-ggplot(birth)+ geom_point(aes(x = birth_q, y=kolda))+ 
-  annotate("rect", xmin = 9, xmax =10, ymin = -1, ymax = Inf,color="Orange",alpha = .2)+
+ggplot(birth)+ geom_point(aes(x = birth_q, y=kolda), size =4)+ 
+  annotate("rect", xmin = 9, xmax =10, ymin = -Inf, ymax = Inf,color="Orange",alpha = .2)+
   labs(title = "Median hemoglobin by Birth Quarter: Kolda",x = "Birth Quarter: 0 = 2006", y= "Median Hemoglobin")
 ```
 This evidence is unclear. The effect of the 2008 crisis could not have been not uniformly large across the country, or else it would be apparent.
