--- a/write-up/write-up.rmd
+++ b/write-up/write-up.rmd
@@ -386,7 +386,9 @@ labs(title ="CDF of Predicted Effects in terms of Hemoglobin-for-Age", x = "Effe
 
 ```
 
-The implied effects for the urban 2010 population are large. For the urban-poor, the effect ranges from -1 to -.5 standard deviations in 2010. The standard deviation of hemoglobin by age in Senegal is around 14-15 g/L. To understand the magnitude of this shocks, consider a 10 g/L shock to hemoglobin. If every child in Senegal was exposed to such a shock, rates of anemia would be expected to increase from ~60% to ~85%. As a further illustration, consider a typical poor household in Dakar (10th percentile of the wealth distribution within Dakar). The expected effect would be ~-14 g/L of hemoglobin. For a child not to be driven into anemia after such a shock, they would have to have initial hemoglobin of 120 g/L, the 90th percentile of the overall distribution of hemoglobin in Senegal. The effect of the crisis is noticeable in the raw data. Below I plot the median hemoglobin by birth quarter, just as I did above, but this time split into rural and urban groups and only including observations from the 2010 survey.
+The implied effects for the urban 2010 population are large. For the urban-poor, the effect ranges from -1 to -.5 standard deviations in 2010. The standard deviation of hemoglobin by age in Senegal is around 14-15 g/L. To understand the magnitude of this shocks, consider a 10 g/L shock to hemoglobin. If every child in Senegal was exposed to such a shock, rates of anemia would be expected to increase from ~60% to ~85%. As a further illustration, consider a typical poor household in Dakar (10th percentile of the wealth distribution within Dakar). The expected effect would be ~-14 g/L of hemoglobin. For a child not to be driven into anemia after such a shock, they would have to have initial hemoglobin of 120 g/L, the 90th percentile of the overall distribution of hemoglobin in Senegal. 
+-.5
+Once broken into urban and rural groups, the effect of the crisis is noticeable in the raw data. Below I plot the median hemoglobin by birth quarter, just as I did above, but this time split into rural and urban groups and only including observations from the 2010 survey.
 
 ```{r urb-rur birth, fig.height = 6, fig.width = 10, fig.align = "center"}
 load("~/Research/Anemia/Anemia/data/urban_birthq_graph.Rdata")
@@ -452,12 +454,12 @@ The results above provide support for the following hypotheses:
 
 1. The 2008 crisis had a negative impact on the maternal nutrition of urban-dwellers, but not rural-dwellers;
 2. The effect of the 2008 crisis on nutrition was greater for the poor than the rich; 
-3. The effect of the 2008 crisis on child hemoglobin is discernible in 2010, but not in 2012, suggesting a dissipation of signal; and,
+3. The effect of the 2008 crisis on child hemoglobin was discernible in 2010, but not in 2012, suggesting a dissipation of signal from the shock; and,
 4. For urban dwellers, the effect of the 2008 crisis was greatest for those closest to Dakar.
 
 For those affected-- the urban poor-- the estimated effect of being exposed in-utero to the 2008 crisis is between 10-14 g/L of hemoglobin, where the cutoff for anemia is defined at 105 g/L. I would argue that these effects are best understood as lower bounds. Because with the fetal origins approach we implicitly compare those in-utero and those already born, the estimated effect of exposure is net any negative impact on children already born. Also, given the persistence in iron stocks and budget constraints, those conceived after the crisis also likely felt some negative effects. I run a more narrow regression in the Appendix, which discards around half the data and focuses on those exposed and those born just before exposure. The estimated effect of the crisis is larger than in my main specification, further supporting the argument that my main results form a lower bound.
 
-There is substantial attenuation of the effect of the 2008 crisis between 2010 and 2012. This should not be interpreted as recovery of health, but rather as the masking of an informative signal. Iron during the first 1000 days of life (including gestation) is extremely important, and iron deficiency impairs cognitive and motor development in ways that can never be recovered [@lozoffIronDeficiencyChild2007]. Therefore, looking at the effect of in-utero shocks too late in life can mask important differences. Two children who seem the same in 2012 in terms of hemoglobin, actually had very different hemoglobin in 2010, and therefore are on very different biological trajectories.
+There is substantial attenuation of the effect of the 2008 crisis between 2010 and 2012. This should not be interpreted as recovery of health, but rather as the masking of an informative signal. Iron is a critical nutrient during the first 1000 days of life (including gestation), and deficiency can impair cognitive and motor development [@lozoffIronDeficiencyChild2007]. Looking at the effect of in-utero shocks too late in life can mask important differences. Two children who seem the same in 2012 in terms of hemoglobin, actually had very different hemoglobin in 2010, and therefore are on very different biological trajectories.
 
 ## Interpretation of Variables
 
@@ -465,21 +467,31 @@ Although exposure was defined with respect to prices, the crisis was more than j
 
 Similarly, distance-to-Dakar should be considered as a general proxy for integration to the world market. Distance captures a broad set of socio-economic conditions. We would expect areas further from Dakar to be poorer, have less education and have more subsistence agriculture relative to commercial agriculture. Thus, the estimated effect will not be of transportation costs alone, but rather the combination general set of characteristics associated with being further from Dakar. Likewise, "wealth" in the DHS is a synthetic index, rather than an actual measure of household assets. Thus, wealth in this study ought to be thought of as a continuous measure of socio-economic status, which is correlated with household assets and income. 
 
-## Connecting to a Broader Literature
+## Connection to the Broader Literature
 
-My results support the existing view of the food policy literature [@cohenFoodPriceCrisis2010; @dimovaGlobalFoodCrisis2013] that increases in food prices negatively affect urban households while having little effect on the rural populace. While the results are too noisy to reject the null hypothesis that the crisis had a null effect on rural households, we also cannot rule out that the nutrition rural households improved during the crisis. This might due to the increased income from sale of food, as well as substitution toward locally produced, high-iron crops like millet and sorghum.
+My results support the existing view that increases in food prices negatively affect urban households while having little effect on the rural populace [@cohenFoodPriceCrisis2010; @dimovaGlobalFoodCrisis2013] . While the results are too noisy to reject the null hypothesis that the crisis had no effect on rural households, I do find a slight improvement in hemoglobin for rural-dwellers exposed to the crisis in-utero. This might due to the increased income from sale of food, as well as substitution toward locally produced, high-iron crops like millet and sorghum.
 
-All of this discussion and analysis has been specific to Senegal. I would like to stress that one would expect very different effects of the crisis in different countries. As shown above, millet production actually increased during 2008. This may reflect a reserve capacity for food production, or a fortunate coincidence of good yields coinciding with high price of imports. In either case, it suggests significant value in having substantial domestic food production capacity. Given a sudden increase in food prices, households may adapt by shifting production towards food. Even if adaptation isn't possible, the independence of world price and local weather conditions imply that having some domestic production and some imported food supply would shrink the variance of food consumption. A country which completely abandons local food production in order to specialize in cash crops, would be in a significantly more vulnerable position than Senegal was in 2008. Thus, my work suggests some empirical support to the arguments for "food-sovereignty" in the food-policy literature [@rossetFoodSovereigntyContemporary2008].
+All of this discussion and analysis has been specific to Senegal. One would expect very different effects of the 2008 crisis in different countries. As shown above, millet production actually increased during 2008. This may reflect a reserve capacity for food production, or a fortunate coincidence of good yields coinciding with high price of imports. In either case, it suggests significant value in having reserve domestic food production capacity. Given a sudden increase in food prices, households may adapt by shifting production towards food. Even if adaptation isn't possible, the independence of world price and local weather conditions imply that having some domestic production and some imported food supply would shrink the variance of food consumption. A country which completely abandons local food production in order to specialize in cash crops, would be in a significantly more vulnerable position than Senegal was in 2008. Thus, my work may provide suggestive evidence to the arguments for "food-sovereignty" in the food-policy literature [@rossetFoodSovereigntyContemporary2008].
 
 # Conclusion
 
-I find suggestive evidence that the 2008 world food crisis negatively affected the health of women, as shown by the health of their children, in urban Senegal. The effect is strongest and most consistent around Dakar. Within the context of the food-policy literature, my results are direct evidence to the hypothesis that food price shocks negatively affect urban households, without having a large effect on rural households. My results suggest that the effect of a negative shock to maternal nutrition may have a large effect on child hemoglobin, outweighing the effects on children. This negative shock is apparent 2 years ex-post, but has dissipated by 4 years ex-post. As Iron is a critical micronutrient for fetal and infant neuro-development, although the shock has dissipated, its effect on long-run health and welfare will remain. 
+I find suggestive evidence that the 2008 world food crisis negatively affected the health of women, as shown by the health of their children, in urban Senegal. The effect is strongest and most consistent around Dakar. Within the context of the food-policy literature, my results are direct evidence to the hypothesis that food price shocks negatively affect urban households, without having a large effect on rural households. 
+
+My results suggest that the effect of a negative shock to maternal nutrition may have a large effect on the hemoglobin of infants who were in-utero, outweighing the effect of the same shock on children who are already born. This negative shock is apparent 2 years ex-post, but has dissipated by 4 years ex-post. As iron is a critical micronutrient for fetal and infant neuro-development, although the shock has dissipated, its effect on long-run health and welfare remain. 
 
 These results are evidence that the health of poor people in poor countries depends on the movement of international markets. The 2008 food price crisis is a specific episode which had a strong, negative impact on the urban-poor of Senegal. Since 2008 urbanization, and food imports, have continued to increase in Senegal. Incomes have also risen. Whether the country is more or less vulnerable today to a price shock like that of 2008 is difficult to answer. 
 
-We expect urban populations to be less vulnerable to drought and other natural disasters. There would seem to be a trade-off then, between vulnerability to market shocks and vulnerability to shocks from nature. Urban, well-connected populations are more vulnerable to the market, while rural, remote populations are vulnerable to nature. Here we must bring in that universal feature of social analysis: class. In either case, it is the poor who are vulnerable. Any policy which thinks of mitigating the effect of these shocks, whether they come from the market or from nature, must keep this in mind. 
+We expect urban populations to be less vulnerable to drought and other natural disasters. There would seem to be a trade-off then, between vulnerability to market shocks and vulnerability to shocks from nature. Urban, well-connected populations are more vulnerable to the market, while rural, remote populations are vulnerable to nature. Here we must bring in that universal feature of social analysis: class. In either case, it is the poor who are vulnerable and the rich who are not. Any policy which thinks of mitigating the effect of these shocks, whether they come from the market or from nature, must keep class in the foreground. 
 
-This is a fetal origins paper. In general, the fetal-origins literature tends to concentrate on the fetus. I would like to draw attention to the mother. Poor fetal nutrition is one and the same as poor maternal nutrition. Any discussion of infant health must consider gender inequality [@osmaniHiddenPenaltiesGender2003c]. The negative consequences of the 2008 crisis on child hemoglobin are direct evidence to the malnutrition of poor, urban women of Senegal. In order to ensure the health of a population, the health of women of childbearing age must be the focus.
+This is a fetal origins paper. In general, the fetal-origins literature tends to concentrate on the fetus. I would like to draw attention to the mother. Poor fetal nutrition comes from poor maternal nutrition. Any discussion of infant health must consider gender inequality [@osmaniHiddenPenaltiesGender2003c]. The negative consequences of the 2008 crisis on child hemoglobin are direct evidence to the malnutrition of poor, urban women of Senegal. In order to ensure the health of a population, policy makers ought to focus on the health of women.
+
+# Future Research
+
+There are several obvious follow-ups to this analysis. One is a systematic exploration of heterogeneity in response to the crisis across Senegal. I could find regional production and consumption data for food commodities, and look if the behavior differed across net-sellers vs net-buyers. In order to have more disaggregated data, I could use the LSMS and analyze this net-seller question on the household level. This would be a good way to see how the crisis affected the rural populace.
+
+More simply, I could expand this analysis to include Senegal's neighbors. I have DHS surveys in 2010-2011 in Burkina Faso, Cote D'ivoire, Liberia and Guinea.
+
+Another route forward would be to explore the effects of local shocks, like drought. I would expect the pattern of effect to be inverse of the pattern I find above, except that wealth still does the same thing.
 
 # References
 
